--- a/webapp/view/Acting.view.xml
+++ b/webapp/view/Acting.view.xml
@@ -605,8 +605,8 @@
                                 <l:GridData span="L3 M3 S12" />
                             </layoutData>
                         </Text>
-                        <Label text="{i18n>tanggalBerakhirStatus}"/>
-                        <DatePicker id="tanggalBerakhirActing" value="" width="12rem" editable="true" >
+                        <Label text="{i18n>tanggalBerakhirStatus}" required="true"/>
+                        <DatePicker id="tanggalBerakhirActing" value="" width="12rem" editable="true"  required="true">
                             <layoutData>
                                 <l:GridData span="L4 M4 S12" />
                             </layoutData>
