--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -80,6 +80,11 @@
     border-radius: 5px;
 }
 
+.inactiveRow {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
 
 /* .greyBackground {
     background-color: #69696b;
