--- a/webapp/view/Approval.view.xml
+++ b/webapp/view/Approval.view.xml
@@ -5,11 +5,17 @@
     <semantic:FullscreenPage navButtonPress="onNavBack" showNavButton="true" id="approvalPage" showSubHeader="true" showFooter="true" floatingFooter="false" title="{i18n>appApproval}">
         <semantic:content>
             <VBox class="sapUiSmallMarginBeginEnd sapUiMediumMarginTop">
-                <Table id="approvalTable" inset="false" alternateRowColors="true" items="{approvalModel>/items}">
+                <Table 
+                    id="approvalTable" 
+                    inset="false" 
+                    alternateRowColors="true" 
+                    items="{approvalModel>/items}"
+                    mode="MultiSelect">
                     <headerToolbar>
                         <OverflowToolbar>
                             <Title text="{i18n>employee}"></Title>
                             <ToolbarSpacer/>
+                            <Button text="Approve Selected" type="Emphasized" press="onMassApprove"/>
                             <Button text="Submit" type="Accept" press="onSubmitPress" width="8rem" enabled="{appParams>/IsEditable}" visible="false"/>
                             <Button tooltip="View Sort Settings" icon="sap-icon://sort" press="handleSortButtonPressed" visible="{listSetting>/isAll}"/>
                             <Button tooltip="View Filter Settings" icon="sap-icon://filter" press="handleFilterButtonPressed" visible="{listSetting>/isAll}"/>
@@ -41,7 +47,16 @@
                         </Column>
                     </columns>
                     <items>
-                        <ColumnListItem vAlign="Middle" type="Navigation" press="onEmployeeApprovalPressed">
+                        <ColumnListItem 
+                            vAlign="Middle" 
+                            type="Navigation" 
+                            press="onEmployeeApprovalPressed"
+                            class="{
+                                = (${approvalModel>Status} === 'A' || 
+                                ${approvalModel>Status} === 'R' || 
+                                ${approvalModel>Status} === 'P' || 
+                                ${approvalModel>Status} === 'V') ? 'inactiveRow' : ''
+                            }">
                             <cells>
                                 <Avatar displaySize="Custom"
                                     initials="{path: 'approvalModel>EmployeeName/FormattedName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
